--- a/final_fyp_nb.ipynb
+++ b/final_fyp_nb.ipynb
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "a199053f",
+   "id": "c3404b3b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3129,7 +3129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 96,
    "id": "a2b5861e",
    "metadata": {
     "colab": {
@@ -3145,15 +3145,25 @@
      "output_type": "stream",
      "text": [
       "(720, 1280, 3)\n",
+      "19 July 2023 Wednesday 22:46:06:621921\n",
       "(720, 1280, 3)\n",
+      "19 July 2023 Wednesday 22:46:06:632717\n",
       "(720, 1280, 3)\n",
+      "19 July 2023 Wednesday 22:46:06:642438\n",
       "(720, 1280, 3)\n",
+      "19 July 2023 Wednesday 22:46:06:652539\n",
       "(720, 1280, 3)\n",
+      "19 July 2023 Wednesday 22:46:06:664084\n",
       "(720, 1280, 3)\n",
+      "19 July 2023 Wednesday 22:46:06:673664\n",
       "(720, 1280, 3)\n",
+      "19 July 2023 Wednesday 22:46:06:683925\n",
       "(720, 1280, 3)\n",
+      "19 July 2023 Wednesday 22:46:06:692916\n",
       "(720, 1280, 3)\n",
-      "(720, 1280, 3)\n"
+      "19 July 2023 Wednesday 22:46:06:702807\n",
+      "(720, 1280, 3)\n",
+      "19 July 2023 Wednesday 22:46:06:712388\n"
      ]
     },
     {
@@ -3181,8 +3191,10 @@
     "for ax, im in zip(grid, keyframe_arr):    \n",
     "   \n",
     "#    start_time = time.asctime(time.istime())\n",
+    "    ist_now = datetime.datetime.now(tz=ist)\n",
+    "    start_time = ist_now.strftime('%d %B %Y %A %H:%M:%S:%f')\n",
     "    print(im.shape)\n",
-    "#     print(start_time)\n",
+    "    print(start_time)\n",
     "    ax.imshow(im)"
    ]
   },
